--- a/products.html
+++ b/products.html
@@ -21,6 +21,13 @@
     <p id="p1">Neuron<sup>2</sup>tur is An online learning platform where users can learn how to make AIs using programming</p>
     <p id="spec">This platform teaches the users who no nothing about AI and programming about these concepts with easy to follow tutorials and live examples.This platform teaches users how to make an AI using the programming language 'python' and one of it's libraries called 'tensorflow' both of them are FOSS(Free and Open Source Software) tools</p>
     </section>
+    <section>
+        <h2>Buy The Beginners Pack Right Now!</h2>
+        <div id="my-store-106847102"></div>
+        <div>
+        <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?106847102&data_platform=code&data_date=2024-08-03" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-106847102");</script>
+        </div>
+    </section>
     
     <script src="script.js"></script>
 </body>
