--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <img id="logo" src="neuron2tur.png" alt="The neuron2tur logo">
     <p id="para2">Neuron<sup>2</sup>tur is an online  learning platform where anyone can learn how to build an AI using Programming.</p>
     <p id="para3">This Platform is aimed at students and people who want to acqire skills in AI and Programming.</p>
+    <h3>Visit this link to ask about this service to a customer support bot</h3>
+    <a href="https://landbot.online/v3/H-2577126-RLU6ZMAJDUL8Z6SL/index.html">click here to ask questions to the bot</a>
     <script src="script.js"></script>
 </body>
 </html>
